Issue #7504 Share map modal window not showing correctly on mobile
The fix applied for this issue consists of changing the component
that renders the content of the share modal window (from Dialog to ResizableModal).
The latter allows all content contained within the modal to be
completely responsive and scrollable so that the modal won't overflow
the mobile screen limits and the content can be seen scrolling up
when the device is in horizontal view mode.

--- a/web/client/themes/default/less/modal.less
+++ b/web/client/themes/default/less/modal.less
@@ -177,6 +177,9 @@
             height: inherit;
             flex-direction: column;
             min-height: 0;
+            .share-panel-modal-body {
+                padding: 0 8px;
+            }            
             & > div {
                 overflow-y: auto;
                 flex: 1;
